tests/spread/spread.exp
Error: test3.js:8
  8: var y: number = o.y;
                     ^^^ string. This type is incompatible with
  8: var y: number = o.y;
            ^^^^^^ number

Error: test3.js:9
  9: var z: number = o.z;
                     ^^^ string. This type is incompatible with
  9: var z: number = o.z;
            ^^^^^^ number

Error: test3.js:17
 17: var t: boolean = s.y; // error, string or number
                      ^^^ number. This type is incompatible with
 17: var t: boolean = s.y; // error, string or number
            ^^^^^^^ boolean

Error: test3.js:17
 17: var t: boolean = s.y; // error, string or number
                      ^^^ string. This type is incompatible with
 17: var t: boolean = s.y; // error, string or number
            ^^^^^^^ boolean

Error: test6.js:10
 10: (p: {foo: string; abc: string}); // error, p doesn't have `abc` yet
      ^ object literal. This type is incompatible with
 10: (p: {foo: string; abc: string}); // error, p doesn't have `abc` yet
         ^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `abc` is incompatible:
     10: (p: {foo: string; abc: string}); // error, p doesn't have `abc` yet
             ^^^^^^^^^^^^^^^^^^^^^^^^^^ property `abc`. Property not found in
     10: (p: {foo: string; abc: string}); // error, p doesn't have `abc` yet
          ^ object literal

Error: test7.js:6
  6:     ({...x}: void); // error, Object
          ^^^^^^ Cannot cast object literal to undefined because object literal [1] is incompatible with undefined [2].
  References:
    6:     ({...x}: void); // error, Object
            ^^^^^^ [1]: object literal
    6:     ({...x}: void); // error, Object
                    ^^^^ [2]: undefined

Error: test8.js:7
  7: ({ ...o }: { p: number, q: number }); // error: string ~> number (prop q)
      ^^^^^^^^ object literal. This type is incompatible with
  7: ({ ...o }: { p: number, q: number }); // error: string ~> number (prop q)
                ^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `q` is incompatible:
     12: type B = { q: string };
                       ^^^^^^ string. This type is incompatible with
      7: ({ ...o }: { p: number, q: number }); // error: string ~> number (prop q)
                                    ^^^^^^ number

Error: test8.js:8
  8: ({ ...o }: { p: string, q: string }); // error: number ~> string (prop p)
      ^^^^^^^^ object literal. This type is incompatible with
  8: ({ ...o }: { p: string, q: string }); // error: number ~> string (prop p)
                ^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `p` is incompatible:
     11: type A = { p: number };
                       ^^^^^^ number. This type is incompatible with
      8: ({ ...o }: { p: string, q: string }); // error: number ~> string (prop p)
                         ^^^^^^ string

Error: test9.js:5
  5: ({ ...o_call }: { "$call": any }); // error: callable should not be copied
      ^^^^^^^^^^^^^ object literal. This type is incompatible with
  5: ({ ...o_call }: { "$call": any }); // error: callable should not be copied
                     ^^^^^^^^^^^^^^^^ object type
  Callable property is incompatible:
      5: ({ ...o_call }: { "$call": any }); // error: callable should not be copied
                         ^^^^^^^^^^^^^^^^ property `$call`. Callable signature not found in
      5: ({ ...o_call }: { "$call": any }); // error: callable should not be copied
          ^^^^^^^^^^^^^ object literal

Error: test9.js:11
 11: ({ ...o_index }: { "$key": any }); // error: indexer key should not be copied
      ^^^^^^^^^^^^^^ object literal. This type is incompatible with
 11: ({ ...o_index }: { "$key": any }); // error: indexer key should not be copied
                      ^^^^^^^^^^^^^^^ object type
  Indexable signature is incompatible:
     11: ({ ...o_index }: { "$key": any }); // error: indexer key should not be copied
                          ^^^^^^^^^^^^^^^ property `$key`. Indexable signature not found in
     11: ({ ...o_index }: { "$key": any }); // error: indexer key should not be copied
          ^^^^^^^^^^^^^^ object literal

Error: test9.js:12
 12: ({ ...o_index }: { "$value": any }); // error: indexer value should not be copied
      ^^^^^^^^^^^^^^ object literal. This type is incompatible with
 12: ({ ...o_index }: { "$value": any }); // error: indexer value should not be copied
                      ^^^^^^^^^^^^^^^^^ object type
  Indexable signature is incompatible:
     12: ({ ...o_index }: { "$value": any }); // error: indexer value should not be copied
                          ^^^^^^^^^^^^^^^^^ property `$value`. Indexable signature not found in
     12: ({ ...o_index }: { "$value": any }); // error: indexer value should not be copied
          ^^^^^^^^^^^^^^ object literal


Found 11 errors
